# LetterBoxed_Solver

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  letterboxd_solver.py  main.py  nginx.conf  pyproject.toml  test_letterboxd_solver.py
static/: style.css
templates/: error.html  index.html  result.html
word_lists/: 2of12.txt
