[project]
name = "letterboxdsolver-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "pytest>=8.3.5",
]
